--- a/Backend/Backend/templates/vendor_home.html
+++ b/Backend/Backend/templates/vendor_home.html
@@ -44,6 +44,7 @@
         console.log('hi');
 
         const loc = await getUserLocation();
+        console.log(loc);
 
         const payload = {
             'name': '{{vname}}_{{bincount + 1}}',
