--- a/Backend/Backend/templates/vendor_home.html
+++ b/Backend/Backend/templates/vendor_home.html
@@ -30,7 +30,7 @@
         {% for bin in qrbins %}
         <div>
             <h1>{{bin.name}}</h1>
-            <img src="{{ qrcode(bin) }}" height="200px" width="200px" style="margin-left: 20px" />
+            <img src="{{ qrcode(bin['qrcode']) }}" height="200px" width="200px" style="margin-left: 20px" />
         </div>
 
 
