--- a/Backend/Backend/static/web/css/login.css
+++ b/Backend/Backend/static/web/css/login.css
@@ -5,7 +5,8 @@
 }
 
 body{
-    background-image: url('../images/bg.jpg');
+    /* background-image: url('../images/bg.jpg'); */
+    background-color: rgba(46, 139, 86, 0.538);
     background-size: cover;
     background-repeat: no-repeat;
 }   
@@ -54,4 +55,46 @@ body{
 .btn{
     border-radius: 4px;
     padding: 2px 10px;
+}
+
+@media only screen and (max-width: 1200px) {
+    #Login {
+        margin: 50px 200px;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    #Login {
+        margin: 20px 100px;
+    }
+    #logform>input {
+        padding: 8px 20px;
+    }
+    #logform input[type=button] {
+        padding: 2px 8px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #Login {
+        margin: 10px 50px;
+    }
+    #logform>input {
+        padding: 6px 15px;
+    }
+    #logform input[type=button] {
+        padding: 1px 6px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    #Login {
+        margin: 5px 20px;
+    }
+    #logform>input {
+        padding: 4px 10px;
+    }
+    #logform input[type=button] {
+        padding: 1px 4px;
+    }
 }
